--- a/style.css
+++ b/style.css
@@ -18,20 +18,43 @@ body {
 }
 
 .card {
+  position: relative;
+  transition: all 0.4s linear;
+  transform-style: preserve-3d;
   margin: 5px;
-  background-color: #6589f9;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center center;
+}
+
+.card,
+.back,
+.front {
   height: 150px;
   width: 150px;
 }
 
-.selected {
-  border: 4px solid blue;
+.back,
+.front {
+  position: absolute;
+  backface-visibility: hidden;
 }
 
-.match {
-  border: 4px solid red;
-  background-image: none !important;
+.front {
+  z-index: 2;
+  background: #fab942 url("../img/question.gif") no-repeat center center /
+    contain;
+}
+
+.back {
+  transform: rotateY(180deg);
+  background-color: #6589f9;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.selected {
+  transform: rotateY(180deg);
+}
+
+.match .front {
+  background: #6589f9 !important;
 }
